Clarify default setting for compressed oops, class pointers.